Fix image sizing on mobile homepage

--- a/src/app/landing-page/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page/landing-page.component.css
@@ -154,9 +154,15 @@ h2 {
         flex-direction: column;
         justify-content: center;
         align-items: stretch;
-        padding: 0 2ch;
+        background-color: #011638;
+        color: white;
         margin-top: 2em;
         margin-bottom: 2em;
+    }
+
+    .feature img {
+        width: auto;
+        height: auto;
     }
 
     .statement {
